size of video adjusted

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,12 +24,12 @@
           <tr>
             <td>
               <div class="col-5">
-                <video id="localVideo" class="mr-3" autoplay muted playsinline></video>
+                <video id="localVideo" class="mr-3" autoplay muted playsinline style="height: 25rem; width: 35rem;"></video>
               </div>
             </td>
             <td>
               <div class="col-5">
-                <video id="remoteVideo" class="ml-3" autoplay playsinline></video>
+                <video id="remoteVideo" class="ml-3" autoplay playsinline  style="height: 25rem; width: 35rem;"></video>
               </div>
             </td>
           </tr>
@@ -50,7 +50,7 @@
 
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="js/config.js"></script>
+    <script src="js/config.js"></script>
   <script src="js/main.js"></script>
   
   
