Downgraded bootstrap for bootbox support

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,48 +1,54 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 
-<title> MS Teams </title>
+  <title> MS Teams </title>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Import Bootstrap from CDN -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
 <body>
-
   <div class="row">
     <div class="col-10 offset-1">
       <table class="table table-striped">
         <thead>
           <tr>
-            <th scope="col" class="text-end">Room Name:</th>
-            <th scope="col" id="room name"></th>
+            <th scope="col" class="text-right"><h2>Room&nbsp;&nbsp;-</h2></th>
+            <th scope="col"><h2 id="room name"></h2></th>
           </tr>
         </thead>
-        <tbody>   
+        <tbody>
           <tr>
             <td>
               <div class="col-5">
-                <video id="localVideo" class="mr-3" autoplay muted playsinline style="height: 25rem; width: 35rem;"></video>
+                <video id="localVideo" class="mr-3" autoplay muted playsinline
+                  style="height: 25rem; width: 35rem;"></video>
               </div>
             </td>
             <td>
               <div class="col-5">
-                <video id="remoteVideo" class="ml-3" autoplay playsinline  style="height: 25rem; width: 35rem;"></video>
+                <video id="remoteVideo" class="ml-3" autoplay playsinline
+                  style="height: 25rem; width: 35rem;"></video>
               </div>
             </td>
           </tr>
           <tr>
-            <td class="text-center col-6">You</td>
-            <td class="text-center col-6">Remote Person</td>
+            <td class="text-center col-6"><h4>You</h4></td>
+            <td class="text-center col-6"><h4>Remote Person</h4></td>
           </tr>
         </tbody>
       </table>
     </div>
-
-    <div class="offset-5">
-      <div style="margin-left: 5rem">
+    
+  </div>
+  <div class="row">
+    <div class="col text-center">
+      <div>
         <a class="btn btn-danger" href="/">Switch Room</a>
       </div>
     </div>
@@ -50,10 +56,24 @@
 
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
   <script src="/socket.io/socket.io.js"></script>
-    <script src="js/config.js"></script>
+
+  <!-- Import STUN/TURN config from Xyrsys -->
+  <script src="js/config.js"></script>
+
+  <!-- Import Bootbox and dependencies from CDN -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.min.js"></script>
+
   <script src="js/main.js"></script>
-  
-  
+
 </body>
 
 </html>
